# Finding-Optimal-Vertiport

./: .flake8  .gitignore  .pre-commit-config.yaml  Final Report.docx  Makefile  README.md  isort.cfg  pyproject.toml  requirements.txt
data/: AllPoints_WGS84_final.csv  centers.xlsx  modified_centers.xlsx  random_point.csv
docs/: Final_Report_IEEE.docx  project_planning_sheet.xlsx
docs/latex/: main.tex
notebook/: final_model.ipynb  first_model.ipynb  skeleton_model.ipynb
result/: result.xlsx
