[tool.poetry]
name = "ML Team 4"
description = "Introduction to Machine Learning Team Project"
author = [
    "21900759@handong.ac.kr", 
    "22100456@handong.ac.kr", 
    "22100573@handong.ac.kr",
    "aes1727@handong.ac.kr",
    "22200105@handong.ac.kr",
    "22300189@handong.ac.kr",
    "hyehye0407@handong.ac.kr"]

[tool.poetry.dependencies]
black = ">=19.3b0,<=22.12"
isort = ">=5.7"
mypy = ">=0.910"
pre-commit = ">=2.13"
pylint = ">=2.9"
python = ">=3.8"

[tool.black]
line-length = 120
target-version = ['py38']
